더보기 버튼 추가

--- a/html/main.html
+++ b/html/main.html
@@ -151,6 +151,11 @@
         <article class="swiper-back">
             <div class="swiper-name">판매 상품</div>
             <div class="swiper">
+                <a href="/html/all_product_page.html"><button type="button" class="btn btn-outline-dark plus-btn-item">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-plus-lg" style="margin-right: 5px; margin-bottom: 3px;" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
+                  </svg>더보기
+                </button></a>
                 <div class="swiper-wrapper">
                   <img class="swiper-slide" src="/item_jpgs/item1.jpg"></img>
                   <img class="swiper-slide" src="/item_jpgs/item2.jpg"></img>
@@ -178,6 +183,11 @@
         <article class="swiper-back">
             <div class="swiper-name">인기 상품</div>
             <div class="swiper">
+                <a href="/html/all_product_page.html"><button type="button" class="btn btn-outline-dark plus-btn-item">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-plus-lg" style="margin-right: 5px; margin-bottom: 3px;" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"/>
+                  </svg>더보기
+                </button></a>
                 <div class="swiper-wrapper">
                   <img class="swiper-slide" src="/item_jpgs/item1.jpg"></img>
                   <img class="swiper-slide" src="/item_jpgs/item2.jpg"></img>
