고객지원 페이지 추가

--- a/html/main.html
+++ b/html/main.html
@@ -60,6 +60,7 @@
               <li class="nav__item"><a href="/html/living_product_page.html" class="nav__link">가구 상품</a></li>
               <li class="nav__item"><a href="/html/outdoor_product_page.html" class="nav__link">야외 상품</a></li>
               <li class="nav__item"><a href="/html/life_product_page.html" class="nav__link">생활 상품</a></li>
+              <li class="nav__item"><a href="/html/customer_page.html" class="nav__link">고객 지원</a></li>
           </ul>
       </nav>
       <div class="nav__toggle">
@@ -104,6 +105,7 @@
       <div class="div__item"><a href="/html/living_product_page.html">가구 상품</a></div>
       <div class="div__item"><a href="/html/outdoor_product_page.html">야외 상품</a></div>
       <div class="div__item"><a href="/html/life_product_page.html">생활 상품</a></div>
+      <div class="div__item"><a href="/html/customer_page.html">고객 지원</a></div>
     </div>
     <div class="badges-container">
       <div class="badge">
