--- a/html/customer_page.html
+++ b/html/customer_page.html
@@ -3,43 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>스틸스</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gasoek+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
-    />
-    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="http://fonts.googleapis.com/icon?family=Material+Icons"
-    />
     <link
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="/css/product_all.css" />
-    <link rel="stylesheet" href="/css/proguct_page.css" />
+    <link rel="stylesheet" href="/css/purchase-pg.css" />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/footer.css" />
     <link rel="stylesheet" href="/css/animation.css" />
     <link rel="stylesheet" href="/css/badge.css" />
-    <link rel="stylesheet" href="/css/login.css" />
     <link rel="stylesheet" href="/css/search.css" />
+    <link rel="stylesheet" href="/css/login.css" />
     <link rel="stylesheet" href="/css/cart.css" />
+    <title>스틸스</title>
   </head>
-
   <body>
     <header class="header">
       <div class="nav-login" id="login_open">
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          width="30px"
+          width="40px"
           fill="white"
           class="bi bi-person-circle"
           viewBox="0 0 16 16"
@@ -63,9 +70,15 @@
           <li class="nav__item">
             <a href="/html/all_product_page.html">전체 상품</a>
           </li>
-          <li class="nav__item"><a href="/html/living_product_page.html">가구 상품</a></li>
-          <li class="nav__item"><a href="/html/outdoor_product_page.html">야외 상품</a></li>
-          <li class="nav__item"><a href="/html/life_product_page.html">생활 상품</a></li>
+          <li class="nav__item">
+            <a href="/html/living_product_page.html">가구 상품</a>
+          </li>
+          <li class="nav__item">
+            <a href="/html/outdoor_product_page.html">야외 상품</a>
+          </li>
+          <li class="nav__item">
+            <a href="/html/life_product_page.html">생활 상품</a>
+          </li>
           <li class="nav__item"><a href="/html/customer_page.html">고객 지원</a></li>
         </ul>
       </nav>
@@ -102,12 +115,13 @@
           <div class="hover-text">검색</div>
         </div>
         <!-- 장바구니 -->
-        <div class="button button-menu-icon cart_tog" id="cart-btn">
+        <div class="button button-menu-icon cart_tog">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="30px"
             fill="white"
-            class="bi bi-cart-fill"
+            class="bi bi-cart-fill nav__cart"
+            id="cart-btn"
             viewBox="0 0 16 16"
           >
             <path
@@ -135,16 +149,19 @@
         </div>
       </div>
     </header>
-
-    <article class="body-back"></article>
-
     <div class="nav__div">
       <div class="div__item">
         <a href="/html/all_product_page.html">전체 상품</a>
       </div>
-      <div class="div__item"><a href="/html/living_product_page.html">가구 상품</a></div>
-      <div class="div__item"><a href="/html/outdoor_product_page.html">야외 상품</a></div>
-      <div class="div__item"><a href="/html/life_product_page.html">생활 상품</a></div>
+      <div class="div__item">
+        <a href="/html/living_product_page.html">가구 상품</a>
+      </div>
+      <div class="div__item">
+        <a href="/html/outdoor_product_page.html">야외 상품</a>
+      </div>
+      <div class="div__item">
+        <a href="/html/life_product_page.html">생활 상품</a>
+      </div>
       <div class="div__item"><a href="/html/customer_page.html">고객 지원</a></div>
     </div>
     <div class="badges-container">
@@ -185,137 +202,70 @@
 
     <script>
       // JavaScript
-      $(document).ready(function() {
-        $('.nav__toggle').click(function() {
-            $('.nav__div').toggle();
+      $(document).ready(function () {
+        $(".nav__toggle").click(function () {
+          $(".nav__div").toggle();
         });
 
         // 화면 크기 변경 시 자동으로 네비게이션 숨기기
-        $(window).resize(function() {
-           $('.nav__div').hide();
+        $(window).resize(function () {
+          $(".nav__div").hide();
         });
-    });
-    </script>
-
-    <!-- main -->
-    <div class="container">
-      <div id="modal">
-        <div class="modal_layer">
-          <div class="modal_content">
-            <div class="close_button">
-              <svg
-                id="modal_close_btn"
-                xmlns="http://www.w3.org/2000/svg"
-                width="30"
-                height="30"
-                fill="currentColor"
-                class="bi bi-x-lg"
-                viewBox="0 0 20 20"
-              >
-                <path
-                  d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"
-                />
-              </svg>
-            </div>
-            <div class="content">
-              <div class="swiper">
-                <div class="swiper-wrapper">
-                  <img class="swiper-slide" id="item__1" src="" />
-                  <img class="swiper-slide" id="item__2" src="" />
-                  <img class="swiper-slide" id="item__3" src="" />
-                  <img class="swiper-slide" id="item__4" src="" />
-                </div>
-                <div class="swiper-pagination"></div>
-                <div class="swiper-button-prev">
-                  <div class="material-icons"></div>
-                </div>
-                <div class="swiper-button-next">
-                  <div class="material-icons"></div>
-                </div>
-              </div>
-              <div id="content" class="description"></div>
-            </div>
-            <div class="buy_button">
-              <a href="/html/purchase.html" class="button btnFloat but_btn"></a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="grid">
-        <div class="card">
-          <img id="item9" src="/item_jpgs/item9.jpg" alt="상품 9" />
-          <h2>아시바 벽 거울 #1, #2</h2>
-          <p>650,000원</p>
-        </div>
-      </div>
-    </div>
-    <script>
-      const btn_data9 = (document.getElementById("item9").onclick =
-        function () {
-          var username = "BB545"; // GitHub 사용자 이름
-          var repo = "1st_project_codingonWeb12th"; // GitHub 저장소 이름
-          var filePath = "product/item_9.txt";
-          // GitHub raw URL 생성
-          var rawURL =
-            "https://raw.githubusercontent.com/" +
-            username +
-            "/" +
-            repo +
-            "/main/" +
-            filePath;
-
-          // AJAX 요청으로 파일 가져오기
-          $.ajax({
-            url: rawURL,
-            success: function (data) {
-              // 파일 내용을 content 요소에 추가
-              $("#content").html(data);
-            },
-            error: function () {
-              $("#content").html(
-                "<p>파일을 불러오는 데 문제가 발생했습니다.</p>"
-              );
-            },
-          });
-          document.getElementById("modal").style.display = "block";
-          document
-            .getElementById("item__1")
-            .setAttribute("src", "/product_img/item9_1.jpg");
-          document
-            .getElementById("item__2")
-            .setAttribute("src", "/product_img/item9_2.jpg");
-          document
-            .getElementById("item__3")
-            .setAttribute("src", "/product_img/item9_3.jpg");
-          document
-            .getElementById("item__4")
-            .setAttribute("src", "/product_img/item9_4.jpg");
-        });
-
-      document.getElementById("modal_close_btn").onclick = function () {
-        document.getElementById("modal").style.display = "none";
-        document.body.style.overflow = "";
-      };
-
-      new Swiper(".swiper", {
-        loop: true,
-        slidesPerView: 1,
-        centeredSlides: true,
-        pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
-        navigation: {
-          prevEl: ".swiper-button-prev",
-          nextEl: ".swiper-button-next",
-        },
       });
-
-      // $(document).ready(function () {});
     </script>
 
-<article class="body-back"></article>
+    <main>
+      <section class="container">
 
+        <!-- 추가적인 제품들을 여기에 추가할 수 있습니다 -->
+
+        <article class="purchase">
+          <div class="pur-name">회사 정보</div>
+          <div class="our-pro">* 이메일 : steels12@gmail.com</div>
+          <div class="our-pro">* 전화번호: 010-0000-0000</div>
+          <div class="pur-name">고객 정보</div>
+          <div class="checkout">
+            <form id="pur-form">
+              <div class="check-group">
+                <label for="fullname" class="check-name">이름</label>
+                <input
+                  type="text"
+                  id="fullname"
+                  name="fullname"
+                  placeholder="홍길동"
+                  required
+                />
+              </div>
+              <div class="check-group">
+                <label for="tel" class="check-name">전화번호</label>
+                <input
+                  type="tel"
+                  id="tel"
+                  name="tel"
+                  placeholder="010-0000-0000"
+                  required
+                />
+              </div>
+              <div class="check-group">
+                <label for="address" class="check-name">문의 내용</label>
+                <input
+                  type="text"
+                  id="address"
+                  name="address"
+                  placeholder="문의 내용을 입력해주세요."
+                  required
+                />
+              </div>
+              <div class="check-group">
+                <input type="submit" value="등록 완료" />
+              </div>
+            </form>
+          </div>
+        </article>
+      </section>
+    </main>
+
+    <!-- Footer component -->
     <footer>
       <div class="footer">
         <div class="footer-Copyright">
@@ -377,6 +327,34 @@
         </div>
       </div>
     </footer>
+
+    <script>
+      $(document).ready(function () {
+        $("#pur-form").submit(function (event) {
+          event.preventDefault(); // 폼의 기본 제출 동작 방지
+
+          if (this.checkValidity()) {
+            // 폼이 유효한 경우
+
+            // 입력된 정보를 alert으로 표시
+            alert(
+              "등록이 완료되었습니다"
+            );
+            window.location.href = "customer_page.html"; // 메인 페이지로 리다이렉트
+          } else {
+            // HTML5 기본 폼 검증 메시지 사용
+            this.reportValidity(); // 폼이 유효하지 않은 경우, 유효성 검사 메시지를 표시
+          }
+        });
+      });
+    </script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+
     <!--==================== Login.html ====================-->
 <div class="home">
   <div class="blur-background"></div>
@@ -492,6 +470,49 @@ formContainer.classList.remove("active");
 
 </script>
 <!----------------- Login script ----------->
+    <!--==================== SEARCH html====================-->
+    <div class="search" id="search">
+      <form action="" class="search__form">
+        <input
+          type="search"
+          placeholder="검색어를 입력하세요..."
+          class="search__input"
+        />
+      </form>
+
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="30px"
+        fill="currentcolor"
+        class="bi bi-x search__close"
+        id="search-close"
+        viewBox="0 0 16 16"
+      >
+        <path
+          d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"
+        />
+      </svg>
+    </div>
+    <!--==================== SEARCH script====================-->
+    <script>
+      const search = document.getElementById("search"),
+        searchop = document.getElementById("search-open"),
+        searchBtn = document.getElementById("search-btn"),
+        searchClose = document.getElementById("search-close");
+
+      /* Search show */
+      searchop.addEventListener("click", () => {
+        search.classList.add("show-search");
+      });
+      searchBtn.addEventListener("click", () => {
+        search.classList.add("show-search");
+      });
+
+      /* Search hidden */
+      searchClose.addEventListener("click", () => {
+        search.classList.remove("show-search");
+      });
+    </script>
     <!--==================== CART.html ====================-->
     <div class="cart" id="cart">
       <div action="" class="cart__form">
@@ -545,49 +566,6 @@ formContainer.classList.remove("active");
       /* Cart hidden */
       cartClose.addEventListener("click", () => {
         cart.classList.remove("show-cart");
-      });
-    </script>
-    <!--==================== SEARCH html====================-->
-    <div class="search" id="search">
-      <form action="" class="search__form">
-        <input
-          type="search"
-          placeholder="검색어를 입력하세요..."
-          class="search__input"
-        />
-      </form>
-
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="30px"
-        fill="currentcolor"
-        class="bi bi-x search__close"
-        id="search-close"
-        viewBox="0 0 16 16"
-      >
-        <path
-          d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"
-        />
-      </svg>
-    </div>
-    <!--==================== SEARCH script====================-->
-    <script>
-      const search = document.getElementById("search"),
-        searchop = document.getElementById("search-open"),
-        searchBtn = document.getElementById("search-btn"),
-        searchClose = document.getElementById("search-close");
-
-      /* Search show */
-      searchop.addEventListener("click", () => {
-        search.classList.add("show-search");
-      });
-      searchBtn.addEventListener("click", () => {
-        search.classList.add("show-search");
-      });
-
-      /* Search hidden */
-      searchClose.addEventListener("click", () => {
-        search.classList.remove("show-search");
       });
     </script>
   </body>
