--- a/html/outdoor_product_page.html
+++ b/html/outdoor_product_page.html
@@ -66,6 +66,7 @@
           <li class="nav__item"><a href="/html/living_product_page.html">가구 상품</a></li>
           <li class="nav__item"><a href="/html/outdoor_product_page.html">야외 상품</a></li>
           <li class="nav__item"><a href="/html/life_product_page.html">생활 상품</a></li>
+          <li class="nav__item"><a href="/html/customer_page.html">고객 지원</a></li>
         </ul>
       </nav>
       <div class="nav__toggle">
@@ -141,6 +142,7 @@
       <div class="div__item"><a href="/html/living_product_page.html">가구 상품</a></div>
       <div class="div__item"><a href="/html/outdoor_product_page.html">야외 상품</a></div>
       <div class="div__item"><a href="/html/life_product_page.html">생활 상품</a></div>
+      <div class="div__item"><a href="/html/customer_page.html">고객 지원</a></div>
     </div>
     <div class="badges-container">
       <div class="badge">
