메인페이지 변경

--- a/html/customer_page.html
+++ b/html/customer_page.html
@@ -61,7 +61,7 @@
       </div>
       <div class="no_div"></div>
       <div class="nav__brandLogo">
-        <a href="/html/main.html">
+        <a href="/index.html">
           <img src="/img_logo/logo.png" alt="brandLogo" width="90" />
         </a>
       </div>
