--- a/html/purchase.html
+++ b/html/purchase.html
@@ -396,7 +396,7 @@
                 "결제 수단: " +
                 payment
             );
-            window.location.href = "main.html"; // 메인 페이지로 리다이렉트
+            window.location.href = "index.html"; // 메인 페이지로 리다이렉트
           } else {
             // HTML5 기본 폼 검증 메시지 사용
             this.reportValidity(); // 폼이 유효하지 않은 경우, 유효성 검사 메시지를 표시
