--- a/html/all_product_page.html
+++ b/html/all_product_page.html
@@ -219,12 +219,132 @@
               </svg>
             </div>
             <div class="content">
-              <div class="swiper">
+              <div class="swiper" id="modal_1">
                 <div class="swiper-wrapper">
-                  <img class="swiper-slide" id="item__1" src="" />
-                  <img class="swiper-slide" id="item__2" src="" />
-                  <img class="swiper-slide" id="item__3" src="" />
-                  <img class="swiper-slide" id="item__4" src="" />
+                  <img class="swiper-slide" id="item__1" src="/product_img/item1_1.jpg" />
+                  <img class="swiper-slide" id="item__2" src="/product_img/item1_2.jpg" />
+                  <img class="swiper-slide" id="item__3" src="/product_img/item1_3.jpg" />
+                  <img class="swiper-slide" id="item__4" src="/product_img/item1_4.jpg" />
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev">
+                  <div class="material-icons"></div>
+                </div>
+                <div class="swiper-button-next">
+                  <div class="material-icons"></div>
+                </div>
+              </div>
+              <div class="swiper" id="modal_2">
+                <div class="swiper-wrapper">
+                  <img class="swiper-slide" id="item__1" src="/product_img/item2_1.jpg" />
+                  <img class="swiper-slide" id="item__2" src="/product_img/item2_2.jpg" />
+                  <img class="swiper-slide" id="item__3" src="/product_img/item2_3.jpg" />
+                  <img class="swiper-slide" id="item__4" src="/product_img/item2_4.jpg" />
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev">
+                  <div class="material-icons"></div>
+                </div>
+                <div class="swiper-button-next">
+                  <div class="material-icons"></div>
+                </div>
+              </div>
+              <div class="swiper" id="modal_3">
+                <div class="swiper-wrapper">
+                  <img class="swiper-slide" id="item__1" src="/product_img/item3_1.jpg" />
+                  <img class="swiper-slide" id="item__2" src="/product_img/item3_2.jpg" />
+                  <img class="swiper-slide" id="item__3" src="/product_img/item3_3.jpg" />
+                  <img class="swiper-slide" id="item__4" src="/product_img/item3_4.jpg" />
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev">
+                  <div class="material-icons"></div>
+                </div>
+                <div class="swiper-button-next">
+                  <div class="material-icons"></div>
+                </div>
+              </div>
+              <div class="swiper" id="modal_4">
+                <div class="swiper-wrapper">
+                  <img class="swiper-slide" id="item__1" src="/product_img/item4_1.jpg" />
+                  <img class="swiper-slide" id="item__2" src="/product_img/item4_2.jpg" />
+                  <img class="swiper-slide" id="item__3" src="/product_img/item4_3.jpg" />
+                  <img class="swiper-slide" id="item__4" src="/product_img/item4_4.jpg" />
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev">
+                  <div class="material-icons"></div>
+                </div>
+                <div class="swiper-button-next">
+                  <div class="material-icons"></div>
+                </div>
+              </div>
+              <div class="swiper" id="modal_5">
+                <div class="swiper-wrapper">
+                  <img class="swiper-slide" id="item__1" src="/product_img/item5_1.jpg" />
+                  <img class="swiper-slide" id="item__2" src="/product_img/item5_2.jpg" />
+                  <img class="swiper-slide" id="item__3" src="/product_img/item5_3.jpg" />
+                  <img class="swiper-slide" id="item__4" src="/product_img/item5_4.jpg" />
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev">
+                  <div class="material-icons"></div>
+                </div>
+                <div class="swiper-button-next">
+                  <div class="material-icons"></div>
+                </div>
+              </div>
+              <div class="swiper" id="modal_6">
+                <div class="swiper-wrapper">
+                  <img class="swiper-slide" id="item__1" src="/product_img/item6_1.jpg" />
+                  <img class="swiper-slide" id="item__2" src="/product_img/item6_2.jpg" />
+                  <img class="swiper-slide" id="item__3" src="/product_img/item6_3.jpg" />
+                  <img class="swiper-slide" id="item__4" src="/product_img/item6_4.jpg" />
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev">
+                  <div class="material-icons"></div>
+                </div>
+                <div class="swiper-button-next">
+                  <div class="material-icons"></div>
+                </div>
+              </div>
+              <div class="swiper" id="modal_7">
+                <div class="swiper-wrapper">
+                  <img class="swiper-slide" id="item__1" src="/product_img/item7_1.jpg" />
+                  <img class="swiper-slide" id="item__2" src="/product_img/item7_2.jpg" />
+                  <img class="swiper-slide" id="item__3" src="/product_img/item7_3.jpg" />
+                  <img class="swiper-slide" id="item__4" src="/product_img/item7_4.jpg" />
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev">
+                  <div class="material-icons"></div>
+                </div>
+                <div class="swiper-button-next">
+                  <div class="material-icons"></div>
+                </div>
+              </div>
+              <div class="swiper" id="modal_8">
+                <div class="swiper-wrapper">
+                  <img class="swiper-slide" id="item__1" src="/product_img/item8_1.jpg" />
+                  <img class="swiper-slide" id="item__2" src="/product_img/item8_2.jpg" />
+                  <img class="swiper-slide" id="item__3" src="/product_img/item8_3.jpg" />
+                  <img class="swiper-slide" id="item__4" src="/product_img/item8_4.jpg" />
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev">
+                  <div class="material-icons"></div>
+                </div>
+                <div class="swiper-button-next">
+                  <div class="material-icons"></div>
+                </div>
+              </div>
+              <div class="swiper" id="modal_9">
+                <div class="swiper-wrapper">
+                  <img class="swiper-slide" id="item__1" src="/product_img/item9_1.jpg" />
+                  <img class="swiper-slide" id="item__2" src="/product_img/item9_2.jpg" />
+                  <img class="swiper-slide" id="item__3" src="/product_img/item9_3.jpg" />
+                  <img class="swiper-slide" id="item__4" src="/product_img/item9_4.jpg" />
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev">
@@ -339,18 +459,16 @@
             },
           });
           document.getElementById("modal").style.display = "block";
-          document
-            .getElementById("item__1")
-            .setAttribute("src", "/product_img/item1_1.jpg");
-          document
-            .getElementById("item__2")
-            .setAttribute("src", "/product_img/item1_2.jpg");
-          document
-            .getElementById("item__3")
-            .setAttribute("src", "/product_img/item1_3.jpg");
-          document
-            .getElementById("item__4")
-            .setAttribute("src", "/product_img/item1_4.jpg");
+          document.getElementById("modal_1").style.display = "block";
+          document.getElementById("modal_2").style.display = "none";
+          document.getElementById("modal_3").style.display = "none";
+          document.getElementById("modal_4").style.display = "none";
+          document.getElementById("modal_5").style.display = "none";
+          document.getElementById("modal_6").style.display = "none";
+          document.getElementById("modal_7").style.display = "none";
+          document.getElementById("modal_8").style.display = "none";
+          document.getElementById("modal_9").style.display = "none";
+
         });
       const btn_data2 = (document.getElementById("item2").onclick =
         function () {
@@ -380,18 +498,15 @@
             },
           });
           document.getElementById("modal").style.display = "block";
-          document
-            .getElementById("item__1")
-            .setAttribute("src", "/product_img/item2_1.jpg");
-          document
-            .getElementById("item__2")
-            .setAttribute("src", "/product_img/item2_2.jpg");
-          document
-            .getElementById("item__3")
-            .setAttribute("src", "/product_img/item2_3.jpg");
-          document
-            .getElementById("item__4")
-            .setAttribute("src", "/product_img/item2_4.jpg");
+          document.getElementById("modal_2").style.display = "block";
+          document.getElementById("modal_1").style.display = "none";
+          document.getElementById("modal_3").style.display = "none";
+          document.getElementById("modal_4").style.display = "none";
+          document.getElementById("modal_5").style.display = "none";
+          document.getElementById("modal_6").style.display = "none";
+          document.getElementById("modal_7").style.display = "none";
+          document.getElementById("modal_8").style.display = "none";
+          document.getElementById("modal_9").style.display = "none";
         });
 
       const btn_data3 = (document.getElementById("item3").onclick =
@@ -422,18 +537,15 @@
             },
           });
           document.getElementById("modal").style.display = "block";
-          document
-            .getElementById("item__1")
-            .setAttribute("src", "/product_img/item3_1.jpg");
-          document
-            .getElementById("item__2")
-            .setAttribute("src", "/product_img/item3_2.jpg");
-          document
-            .getElementById("item__3")
-            .setAttribute("src", "/product_img/item3_3.jpg");
-          document
-            .getElementById("item__4")
-            .setAttribute("src", "/product_img/item3_4.jpg");
+          document.getElementById("modal_3").style.display = "block";
+          document.getElementById("modal_2").style.display = "none";
+          document.getElementById("modal_1").style.display = "none";
+          document.getElementById("modal_4").style.display = "none";
+          document.getElementById("modal_5").style.display = "none";
+          document.getElementById("modal_6").style.display = "none";
+          document.getElementById("modal_7").style.display = "none";
+          document.getElementById("modal_8").style.display = "none";
+          document.getElementById("modal_9").style.display = "none";
         });
 
       const btn_data4 = (document.getElementById("item4").onclick =
@@ -464,18 +576,15 @@
             },
           });
           document.getElementById("modal").style.display = "block";
-          document
-            .getElementById("item__1")
-            .setAttribute("src", "/product_img/item4_1.jpg");
-          document
-            .getElementById("item__2")
-            .setAttribute("src", "/product_img/item4_2.jpg");
-          document
-            .getElementById("item__3")
-            .setAttribute("src", "/product_img/item4_3.jpg");
-          document
-            .getElementById("item__4")
-            .setAttribute("src", "/product_img/item4_4.jpg");
+          document.getElementById("modal_4").style.display = "block";
+          document.getElementById("modal_2").style.display = "none";
+          document.getElementById("modal_3").style.display = "none";
+          document.getElementById("modal_1").style.display = "none";
+          document.getElementById("modal_5").style.display = "none";
+          document.getElementById("modal_6").style.display = "none";
+          document.getElementById("modal_7").style.display = "none";
+          document.getElementById("modal_8").style.display = "none";
+          document.getElementById("modal_9").style.display = "none";
         });
 
       const btn_data5 = (document.getElementById("item5").onclick =
@@ -506,18 +615,15 @@
             },
           });
           document.getElementById("modal").style.display = "block";
-          document
-            .getElementById("item__1")
-            .setAttribute("src", "/product_img/item5_1.jpg");
-          document
-            .getElementById("item__2")
-            .setAttribute("src", "/product_img/item5_2.jpg");
-          document
-            .getElementById("item__3")
-            .setAttribute("src", "/product_img/item5_3.jpg");
-          document
-            .getElementById("item__4")
-            .setAttribute("src", "/product_img/item5_4.jpg");
+          document.getElementById("modal_5").style.display = "block";
+          document.getElementById("modal_2").style.display = "none";
+          document.getElementById("modal_3").style.display = "none";
+          document.getElementById("modal_4").style.display = "none";
+          document.getElementById("modal_1").style.display = "none";
+          document.getElementById("modal_6").style.display = "none";
+          document.getElementById("modal_7").style.display = "none";
+          document.getElementById("modal_8").style.display = "none";
+          document.getElementById("modal_9").style.display = "none";
         });
 
       const btn_data6 = (document.getElementById("item6").onclick =
@@ -548,18 +654,15 @@
             },
           });
           document.getElementById("modal").style.display = "block";
-          document
-            .getElementById("item__1")
-            .setAttribute("src", "/product_img/item6_1.jpg");
-          document
-            .getElementById("item__2")
-            .setAttribute("src", "/product_img/item6_2.jpg");
-          document
-            .getElementById("item__3")
-            .setAttribute("src", "/product_img/item6_3.jpg");
-          document
-            .getElementById("item__4")
-            .setAttribute("src", "/product_img/item6_4.jpg");
+          document.getElementById("modal_6").style.display = "block";
+          document.getElementById("modal_2").style.display = "none";
+          document.getElementById("modal_3").style.display = "none";
+          document.getElementById("modal_4").style.display = "none";
+          document.getElementById("modal_5").style.display = "none";
+          document.getElementById("modal_1").style.display = "none";
+          document.getElementById("modal_7").style.display = "none";
+          document.getElementById("modal_8").style.display = "none";
+          document.getElementById("modal_9").style.display = "none";
         });
 
       const btn_data7 = (document.getElementById("item7").onclick =
@@ -590,18 +693,15 @@
             },
           });
           document.getElementById("modal").style.display = "block";
-          document
-            .getElementById("item__1")
-            .setAttribute("src", "/product_img/item7_1.jpg");
-          document
-            .getElementById("item__2")
-            .setAttribute("src", "/product_img/item7_2.jpg");
-          document
-            .getElementById("item__3")
-            .setAttribute("src", "/product_img/item7_3.jpg");
-          document
-            .getElementById("item__4")
-            .setAttribute("src", "/product_img/item7_4.jpg");
+          document.getElementById("modal_7").style.display = "block";
+          document.getElementById("modal_2").style.display = "none";
+          document.getElementById("modal_3").style.display = "none";
+          document.getElementById("modal_4").style.display = "none";
+          document.getElementById("modal_5").style.display = "none";
+          document.getElementById("modal_6").style.display = "none";
+          document.getElementById("modal_1").style.display = "none";
+          document.getElementById("modal_8").style.display = "none";
+          document.getElementById("modal_9").style.display = "none";
         });
 
       const btn_data8 = (document.getElementById("item8").onclick =
@@ -632,18 +732,15 @@
             },
           });
           document.getElementById("modal").style.display = "block";
-          document
-            .getElementById("item__1")
-            .setAttribute("src", "/product_img/item8_1.jpg");
-          document
-            .getElementById("item__2")
-            .setAttribute("src", "/product_img/item8_2.jpg");
-          document
-            .getElementById("item__3")
-            .setAttribute("src", "/product_img/item8_3.jpg");
-          document
-            .getElementById("item__4")
-            .setAttribute("src", "/product_img/item8_4.jpg");
+          document.getElementById("modal_8").style.display = "block";
+          document.getElementById("modal_2").style.display = "none";
+          document.getElementById("modal_3").style.display = "none";
+          document.getElementById("modal_4").style.display = "none";
+          document.getElementById("modal_5").style.display = "none";
+          document.getElementById("modal_6").style.display = "none";
+          document.getElementById("modal_7").style.display = "none";
+          document.getElementById("modal_1").style.display = "none";
+          document.getElementById("modal_9").style.display = "none";
         });
 
       const btn_data9 = (document.getElementById("item9").onclick =
@@ -674,18 +771,15 @@
             },
           });
           document.getElementById("modal").style.display = "block";
-          document
-            .getElementById("item__1")
-            .setAttribute("src", "/product_img/item9_1.jpg");
-          document
-            .getElementById("item__2")
-            .setAttribute("src", "/product_img/item9_2.jpg");
-          document
-            .getElementById("item__3")
-            .setAttribute("src", "/product_img/item9_3.jpg");
-          document
-            .getElementById("item__4")
-            .setAttribute("src", "/product_img/item9_4.jpg");
+          document.getElementById("modal_9").style.display = "block";
+          document.getElementById("modal_2").style.display = "none";
+          document.getElementById("modal_3").style.display = "none";
+          document.getElementById("modal_4").style.display = "none";
+          document.getElementById("modal_5").style.display = "none";
+          document.getElementById("modal_6").style.display = "none";
+          document.getElementById("modal_7").style.display = "none";
+          document.getElementById("modal_8").style.display = "none";
+          document.getElementById("modal_1").style.display = "none";
         });
 
       document.getElementById("modal_close_btn").onclick = function () {
