빌드페이지 이미지 오류 수정

--- a/html/life_product_page.html
+++ b/html/life_product_page.html
@@ -227,10 +227,10 @@
             <div class="content">
               <div class="swiper">
                 <div class="swiper-wrapper">
-                  <img class="swiper-slide" id="item__1" src="" />
-                  <img class="swiper-slide" id="item__2" src="" />
-                  <img class="swiper-slide" id="item__3" src="" />
-                  <img class="swiper-slide" id="item__4" src="" />
+                  <img class="swiper-slide" id="item__1" src="/product_img/item9_1.jpg" />
+                  <img class="swiper-slide" id="item__2" src="/product_img/item9_2.jpg" />
+                  <img class="swiper-slide" id="item__3" src="/product_img/item9_3.jpg" />
+                  <img class="swiper-slide" id="item__4" src="/product_img/item9_4.jpg" />
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev">
@@ -292,18 +292,6 @@
             },
           });
           document.getElementById("modal").style.display = "block";
-          document
-            .getElementById("item__1")
-            .setAttribute("src", "/product_img/item9_1.jpg");
-          document
-            .getElementById("item__2")
-            .setAttribute("src", "/product_img/item9_2.jpg");
-          document
-            .getElementById("item__3")
-            .setAttribute("src", "/product_img/item9_3.jpg");
-          document
-            .getElementById("item__4")
-            .setAttribute("src", "/product_img/item9_4.jpg");
         });
 
       document.getElementById("modal_close_btn").onclick = function () {
