--- a/html/outdoor_product_page.html
+++ b/html/outdoor_product_page.html
@@ -224,12 +224,27 @@
               </svg>
             </div>
             <div class="content">
-              <div class="swiper">
+              <div class="swiper" id="modal_7">
                 <div class="swiper-wrapper">
-                  <img class="swiper-slide" id="item__1" src="" />
-                  <img class="swiper-slide" id="item__2" src="" />
-                  <img class="swiper-slide" id="item__3" src="" />
-                  <img class="swiper-slide" id="item__4" src="" />
+                  <img class="swiper-slide" id="item__1" src="/product_img/item7_1.jpg" />
+                  <img class="swiper-slide" id="item__2" src="/product_img/item7_2.jpg" />
+                  <img class="swiper-slide" id="item__3" src="/product_img/item7_3.jpg" />
+                  <img class="swiper-slide" id="item__4" src="/product_img/item7_4.jpg" />
+                </div>
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev">
+                  <div class="material-icons"></div>
+                </div>
+                <div class="swiper-button-next">
+                  <div class="material-icons"></div>
+                </div>
+              </div>
+              <div class="swiper" id="modal_8">
+                <div class="swiper-wrapper">
+                  <img class="swiper-slide" id="item__1" src="/product_img/item8_1.jpg" />
+                  <img class="swiper-slide" id="item__2" src="/product_img/item8_2.jpg" />
+                  <img class="swiper-slide" id="item__3" src="/product_img/item8_3.jpg" />
+                  <img class="swiper-slide" id="item__4" src="/product_img/item8_4.jpg" />
                 </div>
                 <div class="swiper-pagination"></div>
                 <div class="swiper-button-prev">
@@ -298,18 +313,15 @@
             },
           });
           document.getElementById("modal").style.display = "block";
-          document
-            .getElementById("item__1")
-            .setAttribute("src", "/product_img/item7_1.jpg");
-          document
-            .getElementById("item__2")
-            .setAttribute("src", "/product_img/item7_2.jpg");
-          document
-            .getElementById("item__3")
-            .setAttribute("src", "/product_img/item7_3.jpg");
-          document
-            .getElementById("item__4")
-            .setAttribute("src", "/product_img/item7_4.jpg");
+          document.getElementById("modal_7").style.display = "block";
+          document.getElementById("modal_2").style.display = "none";
+          document.getElementById("modal_3").style.display = "none";
+          document.getElementById("modal_4").style.display = "none";
+          document.getElementById("modal_5").style.display = "none";
+          document.getElementById("modal_6").style.display = "none";
+          document.getElementById("modal_1").style.display = "none";
+          document.getElementById("modal_8").style.display = "none";
+          document.getElementById("modal_9").style.display = "none";
         });
 
       const btn_data8 = (document.getElementById("item8").onclick =
@@ -340,20 +352,16 @@
             },
           });
           document.getElementById("modal").style.display = "block";
-          document
-            .getElementById("item__1")
-            .setAttribute("src", "/product_img/item8_1.jpg");
-          document
-            .getElementById("item__2")
-            .setAttribute("src", "/product_img/item8_2.jpg");
-          document
-            .getElementById("item__3")
-            .setAttribute("src", "/product_img/item8_3.jpg");
-          document
-            .getElementById("item__4")
-            .setAttribute("src", "/product_img/item8_4.jpg");
+          document.getElementById("modal_8").style.display = "block";
+          document.getElementById("modal_2").style.display = "none";
+          document.getElementById("modal_3").style.display = "none";
+          document.getElementById("modal_4").style.display = "none";
+          document.getElementById("modal_5").style.display = "none";
+          document.getElementById("modal_6").style.display = "none";
+          document.getElementById("modal_7").style.display = "none";
+          document.getElementById("modal_1").style.display = "none";
+          document.getElementById("modal_9").style.display = "none";
         });
-
       document.getElementById("modal_close_btn").onclick = function () {
         document.getElementById("modal").style.display = "none";
         document.body.style.overflow = "";
