알림 안뜨는 현상 수정 중

--- a/html/all_product_page.html
+++ b/html/all_product_page.html
@@ -926,15 +926,15 @@
 </div>    
 <!--==================== Login script ====================-->
 <script>
-const formOpenBtn = document.querySelector("#form-open")
 const formOpenlg = document.querySelector("#login_open"),
+formOpenBtn = document.querySelector("#form-open"),
 home = document.querySelector(".home"),
 formContainer = document.querySelector(".form_container"),
 formCloseBtn = document.querySelector(".form_close"),
 signupBtn = document.querySelector("#signup"),
 loginBtn = document.querySelector("#login"),
 pwShowHide = document.querySelectorAll(".pw_hide"),
-loggedBtn=document.querySelector(".logged-btn");
+loggedBtn=document.querySelector(".logged-btn"),
 signedBtn=document.querySelector(".signed-in");
 
 
