--- a/html/all_product_page.html
+++ b/html/all_product_page.html
@@ -13,7 +13,7 @@
     <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
     <link
       rel="stylesheet"
-      href="http://fonts.googleapis.com/icon?family=Material+Icons"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link
       rel="stylesheet"
