--- a/html/all_product_page.html
+++ b/html/all_product_page.html
@@ -366,19 +366,19 @@
       <div class="grid">
         <div class="card image-container">
           <img id="item1" src="/item_jpgs/item1.jpg" alt="상품 1" />
-          <div class="save-image-btn" onclick="saveImage()">이미지 저장해서 보기</div>
+          <div class="save-image-btn" onclick="alert('이미지를 저장합니다.')">이미지 저장해서 보기</div>
           <h2>레이크 루이스 테이블</h2>
           <p>2,550,000원</p>
         </div>
         <div class="card image-container">
           <img id="item2" src="/item_jpgs/item2.jpg" alt="상품 2" />
-          <div class="save-image-btn" onclick="saveImage()">이미지 저장해서 보기</div>
+          <div class="save-image-btn" onclick="alert('이미지를 저장합니다.')">이미지 저장해서 보기</div>
           <h2>'와우' 큐브</h2>
           <p>6,400,000원</p>
         </div>
         <div class="card image-container">
           <img id="item3" src="/item_jpgs/item3.jpg" alt="상품 3" />
-          <div class="save-image-btn" onclick="saveImage()">이미지 저장해서 보기</div>
+          <div class="save-image-btn" onclick="alert('이미지를 저장합니다.')">이미지 저장해서 보기</div>
           <h2>'와우' 큐브 소파 테이블</h2>
           <p>8,800,000원</p>
         </div>
@@ -386,19 +386,19 @@
       <div class="grid">
         <div class="card image-container">
           <img id="item4" src="/item_jpgs/item4.jpg" alt="상품 4" />
-          <div class="save-image-btn" onclick="saveImage()">이미지 저장해서 보기</div>
+          <div class="save-image-btn" onclick="alert('이미지를 저장합니다.')">이미지 저장해서 보기</div>
           <h2>아만테 테이블</h2>
           <p>2,100,000원</p>
         </div>
         <div class="card image-container">
           <img id="item5" src="/item_jpgs/item5.jpg" alt="상품 5" />
-          <div class="save-image-btn" onclick="saveImage()">이미지 저장해서 보기</div>
+          <div class="save-image-btn" onclick="alert('이미지를 저장합니다.')">이미지 저장해서 보기</div>
           <h2>파레트 테이블</h2>
           <p>5,800,000원</p>
         </div>
         <div class="card image-container">
           <img id="item6" src="/item_jpgs/item6.jpg" alt="상품 6" />
-          <div class="save-image-btn" onclick="saveImage()">이미지 저장해서 보기</div>
+          <div class="save-image-btn" onclick="alert('이미지를 저장합니다.')">이미지 저장해서 보기</div>
           <h2>라운지 락 테이블 & 의자</h2>
           <p>3,100,000원 & 930,000원</p>
         </div>
@@ -406,30 +406,25 @@
       <div class="grid">
         <div class="card image-container">
           <img id="item7" src="/item_jpgs/item7.jpg" alt="상품 7" />
-          <div class="save-image-btn" onclick="saveImage()">이미지 저장해서 보기</div>
+          <div class="save-image-btn" onclick="alert('이미지를 저장합니다.')">이미지 저장해서 보기</div>
           <h2>아이코닉 부스</h2>
           <p>6,000,000원</p>
         </div>
         <div class="card image-container">
           <img id="item8" src="/item_jpgs/item8.jpg" alt="상품 8" />
-          <div class="save-image-btn" onclick="saveImage()">이미지 저장해서 보기</div>
+          <div class="save-image-btn" onclick="alert('이미지를 저장합니다.')">이미지 저장해서 보기</div>
           <h2>아크 의자</h2>
           <p>1,150,000원</p>
         </div>
         <div class="card image-container">
           <img id="item9" src="/item_jpgs/item9.jpg" alt="상품 9" />
-          <div class="save-image-btn" onclick="saveImage()">이미지 저장해서 보기</div>
+          <div class="save-image-btn" onclick="alert('이미지를 저장합니다.')">이미지 저장해서 보기</div>
           <h2>아시바 벽 거울 #1, #2</h2>
           <p>650,000원</p>
         </div>
       </div>
     </div>
-    <script>
-      function saveImage() {
-        // 이미지를 저장하는 코드 추가
-        alert('이미지를 저장합니다.');
-      }
-    </script>
+   
     <script>
       const btn_data1 = (document.getElementById("item1").onclick =
         function () {
