--- a/html/life_product_page.html
+++ b/html/life_product_page.html
@@ -251,18 +251,13 @@
       <div class="grid">
         <div class="card image-container">
           <img id="item9" src="/item_jpgs/item9.jpg" alt="상품 9" />
-          <div class="save-image-btn" onclick="saveImage()">이미지 저장해서 보기</div>
+          <div class="save-image-btn" onclick="alert('이미지를 저장합니다.')">이미지 저장해서 보기</div>
           <h2>아시바 벽 거울 #1, #2</h2>
           <p>650,000원</p>
         </div>
       </div>
     </div>
-    <script>
-      function saveImage() {
-        // 이미지를 저장하는 코드 추가
-        alert('이미지를 저장합니다.');
-      }
-    </script>
+    
     <script>
       const btn_data9 = (document.getElementById("item9").onclick =
         function () {
