--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
           <button
             type="button"
             class="btn btn-outline-light event-btn"
-            onclick="showEventinform()"
+            onclick="alert('진행 중인 이벤트가 없습니다.')"
           >
             자세히 보기
           </button>
@@ -382,12 +382,6 @@
       <article class="body-back"></article>
     </main>
 
-    <script>
-      function showEventinform() {
-        // 주문 완료 알림창을 표시합니다.
-        alert("진행 중인 이벤트가 없습니다.");
-      }
-    </script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
