장바구니 버튼 수정

--- a/html/outdoor_product_page.html
+++ b/html/outdoor_product_page.html
@@ -473,7 +473,7 @@ formContainer.classList.remove("active");
             <div class="buy_button">
               <a href="/html/purchase.html" class="button btnFloat but_btn"></a>
             </div>
-            <div class="buy_button" onclick="alert('장바구니에 추가되었습니다.')">
+            <div class="buy_button button btnFloat but_btn" onclick="alert('장바구니에 추가되었습니다.')">
               장바구니 추가
             </div>
           </div>
